[gd_scene load_steps=14 format=3 uid="uid://chdhk07v3h66n"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/StateMachine/StateMachine.gd" id="2_28144"]
[ext_resource type="Script" path="res://Scripts/EnemyWalkState.gd" id="3"]

[sub_resource type="CapsuleShape3D" id="1"]

[sub_resource type="CapsuleMesh" id="2"]

[sub_resource type="BoxMesh" id="4"]

[sub_resource type="SphereShape3D" id="6"]

[sub_resource type="Animation" id="7"]
resource_name = "EnemyIdle"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 5, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(90, 0, 0), Vector3(90, -45, 0), Vector3(90, -45, 0), Vector3(90, 45, 0), Vector3(90, 45, 0), Vector3(90, 0, 0)]
}

[sub_resource type="Animation" id="9"]
resource_name = "EnemyWalk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(90, 0, 0), Vector3(90, 0, 0)]
}

[sub_resource type="Animation" id="8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(90, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t66hc"]
_data = {
"EnemyIdle": SubResource("7"),
"EnemyWalk": SubResource("9"),
"RESET": SubResource("8")
}

[sub_resource type="BoxMesh" id="10"]

[sub_resource type="SphereShape3D" id="12"]

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 9
collision_mask = 9
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1.5, 0, -1, -6.55671e-08, 0, 2, 0)
shape = SubResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1.5, 0, 1, -6.55671e-08, 0, 2, 0)
mesh = SubResource("2")

[node name="MeshInstance2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.333333, -1.45705e-08, 0, 0.695352, -0.7223)
mesh = SubResource("4")
skeleton = NodePath("../..")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(30, 0, 0, 0, 30, 0, 0, 0, 30, 0, 0, 0)
shape = SubResource("6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t66hc")
}

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -100)
collision_mask = 7

[node name="MeshInstance3D" type="MeshInstance3D" parent="RayCast3D"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 5, 0, 0, 0)
visible = false
mesh = SubResource("10")

[node name="MeshInstance2" type="MeshInstance3D" parent="RayCast3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, -3.116)
visible = false
mesh = SubResource("10")
skeleton = NodePath("../MeshInstance3D")

[node name="Area2" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area2"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("12")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_28144")

[node name="EnemyWalkState" type="Node" parent="StateMachine"]
script = ExtResource("3")

[connection signal="body_entered" from="Area3D" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="Area2" to="." method="_on_Area2_body_entered"]
